Created compoundWordFilter and Affix.h
Created compoundWordFilter, which checks if words are compound by creating a substring of the two halves of the word and checking if each is part of the set of all words. Also created the Affix.h class to check and filter out valid words that are prefixes or suffixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ set (SRCS main.cpp)
 # containing the manifest, icon and other resources
 
 if (WIN32)
-    set (SRCS ${SRCS} wxWidgetTest.rc main.cpp Wordcrafter.h)
+    set (SRCS ${SRCS} wxWidgetTest.rc main.cpp Wordcrafter.h Affix.h)
 endif (WIN32)
 
 add_executable(${PROJECT_NAME} WIN32 ${SRCS})
